fix(mpc): fix some alignment and padding issue

--- a/1-management-panel/client/src/index.css
+++ b/1-management-panel/client/src/index.css
@@ -33,7 +33,7 @@ main {
 
 .logo {
   font-size: 40px;
-  color: red;
+  color: orangered;
   text-align: center;
   transition: all 2s ease-in-out;
 }
@@ -48,7 +48,7 @@ main {
 .link {
   display: flex;
   color: #fff;
-  padding: 10px 15px;
+  padding: 1px 15px;
   margin: 20px 0px;
   gap: 15px;
   transition: all 0.5s;
